# leasepool

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  make.bat  requirements.txt
docs/source/: changelog.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  examples.rst  faq.rst  index.rst  installation.rst  quickstart.rst  readthedocs.rst
docs/source/api/: backends.rst  grinder.rst  (+5 more)
examples/: 00_quickstart_thread_backend.py  01_lease_context_manager.py  02_manual_acquire_release.py  03_wait_timeout_unavailable.py  04_adaptive_sizing.py  05_stats_and_counts.py  06_lease_expiry_and_revocation.py  07_process_backend_cpu_work.py  08_work_grinder_submit.py  09_work_grinder_enqueue.py  10_submit_from_thread.py  11_error_handling.py  12_interpreter_backend_future_python314.py  13_process_log_forwarding.py  14_complete_library_walkthrough.py  README_EXAMPLES.md  fastapi_lifespan_pattern.py
src/leasepool/: __init__.py  _process_logging.py  backends.py  exceptions.py  grinder.py  manager.py  types.py
tests/: README_TESTING.md  helpers.py  test_backends.py  test_grinder_lifecycle.py  test_long_check_interval.py  test_manager_lifecycle.py  test_manager_validation.py  test_process_backend.py  test_regression_test_1.py  test_regression_test_10.py  test_regression_test_11.py  test_regression_test_12.py  test_regression_test_13.py  test_regression_test_14.py  test_regression_test_15.py  test_regression_test_16.py  test_regression_test_17.py  test_regression_test_2.py  test_regression_test_3.py  test_regression_test_4.py  test_regression_test_5.py  test_regression_test_6.py  test_regression_test_7.py  test_regression_test_8.py  test_regression_test_9.py
(+7 files in other folders)
