[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "leasepool"
version = "0.1.3"
description = "Executor leasing, backpressure, and adaptive CPU/I/O offloading for async Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Sambhu Nampoothiri G" }
]
keywords = ["asyncio", "concurrent.futures", "executor", "threadpool", "processpool", "backpressure"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 3 - Stable",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://pypi.org/project/leasepool/"
Repository = "https://github.com/jackofsometrades99/leasepool"
Documentation = "https://leasepool.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
packages = ["src/leasepool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["leasepool"]
